--- a/_config.yml
+++ b/_config.yml
@@ -4,18 +4,16 @@
 # Site settings
 title: Glass Creek Bicycle Link
 description: |
-  A proposal for a bicycle route through Kew East, Deepdene and Balwyn.
+  Proposal for a safe bicycle route through Kew East, Deepdene and Balwyn.
 owner: Boroondara Bike # or company name
 first_published: 2017 # if migrating another site, the year of your first publish
 email: your-email@domain.com
 baseurl: "/glasscreek" # the subpath of your site, e.g. /blog
 url: "https://boroondarabike.github.io" # the base hostname & protocol for your site
 social:
-  twitter: https://twitter.com/<username>
-  github: https://github.com/<username>
-  linkedin-square: https://linkedin.com/in/<username>
-  facebook-official: https://facebook.com/<username>
-  google-plus-square: https://plus.google.com/u/0/+<username>
+  #twitter: https://twitter.com/<username>
+  github: https://github.com/boroondarabike<username>
+  #facebook-official: https://facebook.com/<username>
   #email: /contact/
   #flickr:
   #instagram:
